src/objects/Distributor_Permission_set__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Permission_set_Name__c</fullName>
        <label>Permission set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group_Name__c</fullName>
        <label>Public Group Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Incentives_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field helps in determining if Solution Incentives is applicable to the region or not.</description>
        <label>Solution Incentives Applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>Distributor Permission set</label>
</CustomObject>